<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ActivityMain"
    tools:context=".Pantallas.MainActivity">


    <ImageView
        android:id="@+id/imagenLogoReg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/logotechcommit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/bienvenido"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenLogoReg" />

    <ImageView
        android:id="@+id/flecha_atrasRegistro"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/flechaatras"
        app:layout_constraintBottom_toBottomOf="@+id/imagenLogoReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagenLogoReg" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/varela_round"
        android:text="Inicia sesión para continuar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/imagen_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/olvidastecontrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:minHeight="24dp"
        android:text="@string/has_olvidado_tu_contrase_a"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/contrasenya"
        app:layout_constraintTop_toBottomOf="@+id/contrasenya" />


    <EditText
        android:id="@+id/correo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/correo"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <EditText
        android:id="@+id/contrasenya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/fondo_input"
        android:ems="10"
        android:fontFamily="@font/varela_round"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="8dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/correo"
        app:layout_constraintStart_toStartOf="@+id/correo"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:passwordToggleEnabled="true" />


    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#59a8a8"
        android:fontFamily="@font/varela_round"
        android:onClick="botonIniciarSesion"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/contrasenya"
        app:layout_constraintStart_toStartOf="@+id/contrasenya"
        app:layout_constraintTop_toBottomOf="@+id/olvidastecontrasena" />


    <ImageView
        android:id="@+id/contrasena"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginEnd="2dp"
        android:src="@drawable/ic_candado"
        app:layout_constraintBottom_toBottomOf="@+id/contrasenya"
        app:layout_constraintEnd_toEndOf="@+id/contrasenya"
        app:layout_constraintTop_toTopOf="@+id/contrasenya"
        app:tint="#454545" />

    <ImageView
        android:id="@+id/correoimg"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_correo"
        app:layout_constraintBottom_toBottomOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="@+id/correo"
        app:layout_constraintTop_toTopOf="@+id/correo"
        app:tint="#454545" />


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#ADEFEDED"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="¿No tienes cuenta?"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/irAIniciarSesion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/irAIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:text="Registrate"
        android:textColor="#0E1375"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/view" />



</androidx.constraintlayout.widget.ConstraintLayout>