...

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_mis_dispositivos"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Pantallas.Mis_Dispositivos"
    tools:showIn="@layout/activity_mi_perfil">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
...
            app:menu="@menu/menu" />


    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C4928B"
        android:clickable="true"
        android:contentDescription="TODO"
        android:foreground="@drawable/icono_mapa"
...
