...
    <string name="escaneaqr">Escanea el código QR de tu dispositivo o intrduce el código manualmente para continuar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="pol_tica_de_privacidad">política de privacidad</string>
    <string name="pol_tica_de_privacidadP">Política de privacidad</string>
    <string name="he_le_do_la_pol_tica_de_privacidad">He leído la</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="politica1">La aplicación móvil TechCommit es propiedad de TechCommit, que es un controlador de datos de tus datos personales. Hemos adoptado esta Política de privacidad, que determina cómo procesamos la información recopilada por TechCommit, que también proporciona las razones por las que debemos recopilar ciertos datos personales sobre ti. Por lo tanto, debes leer esta Política 
    <string name="informaci_n_personal_que_recopilamos">Información personal:</string>
    <string name="cuando_visitas_techcommit_recopilamos_autom_ticamente_cierta_informaci_n_sobre_tu_dispositivo_incluida_informaci_n_sobre_tu_navegador_web_direcci_n_ip_zona_horaria_y_algunas_de_las_cookies_instaladas_en_tu_dispositivo_adem_s_a_medida_que_navegas_recopilamos_informaci_n_sobre_las_p_ginas_web_individuales_o_los_productos_que_ves_qu_sitios_web_o_t_rminos_de_b_squeda_te_remitieron_a_
    <string name="por_qu_procesamos_tus_datos">Procesamiento de datos</string>
    <string name="politica3">Nuestra máxima prioridad es la seguridad de los datos del cliente y, como tal, podemos procesar solo los datos mínimos del usuario, solo en la medida en que sea absolutamente necesario para mantener el sitio web. La información recopilada automáticamente se utiliza solo para identificar casos potenciales de abuso y establecer información estadística sobre el uso del si
    <string name="tus_derechos">Tus derechos:</string>
...
